force-app/main/default/objects/ZendeskValue__c/ZendeskValue__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Zendesk Value</label>
</CustomObject>