force-app/main/default/objects/ZendeskValue__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>Field Api Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>