force-app/main/default/objects/ZendeskValue__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>