force-app/main/default/objects/ZendeskValue__c/fields/SalesforceValue__c.field-meta.xml
<CustomField>
    <fullName>SalesforceValue__c</fullName>
    <label>Salesforce Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>