force-app/main/default/objects/ZendeskValue__c/fields/ZendeskValue__c.field-meta.xml
<CustomField>
    <fullName>ZendeskValue__c</fullName>
    <label>Zendesk Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>