force-app/main/default/objects/ZendeskValue__c/listViews/Tier.listView-meta.xml
<ListView>
    <fullName>Tier</fullName>
    <columns>NAME</columns>
    <columns>FieldApiName__c</columns>
    <columns>ObjectName__c</columns>
    <columns>SalesforceValue__c</columns>
    <columns>ZendeskValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieldApiName__c</field>
        <operation>contains</operation>
        <value>Tier</value>
    </filters>
    <label>Tier</label>
    <language>en_US</language>
</ListView>